Activated multiple selection of properties and they can be deleted, reverted, or cleared. All cells are enabled so it is possible to copy the cell values using Ctrl+C. Fixed problem with fast succeeding usage of the "Add" button. Ensured taht the cell values of all DefaultTableView objects can be copied to the clip board.

--- a/resources/qt4/ui/widgets/property_widget.ui
+++ b/resources/qt4/ui/widgets/property_widget.ui
@@ -32,7 +32,10 @@
          <bool>false</bool>
         </property>
         <property name="selectionMode">
-         <enum>QAbstractItemView::SingleSelection</enum>
+         <enum>QAbstractItemView::ExtendedSelection</enum>
+        </property>
+        <property name="selectionBehavior">
+         <enum>QAbstractItemView::SelectItems</enum>
         </property>
        </widget>
       </item>
