Administration client: When adding  property with the administrative client you can specify a certain class.
Data Management client:
The data management client displays domain properties read-only.
Adjusted size of the property dialog.
Added tool tips for property values.

Additional improvements:
Setting a property value no longer raises an error - even if the value is invalid. The validatio is performed before the property value is persisted.
-> Simplifies property handling in the property editor (no longer have to handleproperties and property definitions)
-> The ItemBase class now ensures that all properties - at least with default values - are set when the properties of an item are accessed.
-> Simplifies identification of the correct property definition - no longer have to think of property name spaces

--- a/resources/qt4/ui/user/properties_dialog.ui
+++ b/resources/qt4/ui/user/properties_dialog.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>463</width>
-    <height>339</height>
+    <width>542</width>
+    <height>347</height>
    </rect>
   </property>
   <property name="minimumSize">
@@ -20,7 +20,7 @@
    <string>Properties</string>
   </property>
   <property name="windowIcon">
-   <iconset resource="../../user.qrc">
+   <iconset>
     <normaloff>:/icons/icons/properties_24.png</normaloff>:/icons/icons/properties_24.png</iconset>
   </property>
   <layout class="QGridLayout" name="gridLayout">
@@ -28,7 +28,7 @@
     <widget class="PropertyWidget" name="propertyWidget" native="true">
      <property name="minimumSize">
       <size>
-       <width>445</width>
+       <width>520</width>
        <height>158</height>
       </size>
      </property>
